# logsync

./: .gitignore  Cargo.toml  README.md  error_report.html  filtered_logs.json  filtered_logs.txt  test_log.txt
src/: auth.rs  config.rs  driver_uploader.rs  lib.rs  logger.rs  main.rs  mod.rs  notifier.rs  parser.rs  report_generator.rs  types.rs  utils.rs  viewer.rs
