[package]
name = "logsync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inotify = "0.7"  # Verifique por atualizações na versão
yup-oauth2 = "11.0.0"
google-drive3 = "6.0.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1.5.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = ["full"] }
mime_guess = "2.0"
dotenv = "0.15"
colored = "2.0"
crossterm = "0.26"
tui = "0.19.0"
chrono = "0.4"

